# anndata-repr

./: .gitignore  README.md  example.ipynb  pyproject.toml
notebooks/: 01-sketches-trevor.ipynb  02-dylan-table.ipynb  02_xarray_thomas.ipynb  03_run_src.ipynb  04_icons_thomas.ipynb  05-demo.ipynb  motivation.ipynb
src/anndata_repr/: __init__.py  _create_icons.py  _formatting_dask_svg.py  _formatting_html.py  _formatting_html_refactor.py  _formatting_html_xarray.py  _formatting_table.py  _svg.py  _version.py  hover_icons.js  searchbox.js
src/anndata_repr/static/: hover_icons.js  script.js  style.css
