[project]
name = "anndata-repr"
version = "0.0.0"
description = "Rich repr for AnnData objects"
authors = []
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = [
    "anndata>=0.10.6",
    "matplotlib>=3.8.3",
    "pooch>=1.8.1",
    "scanpy>=1.10.0",
    "dask[array]>=2024.3.1",
    "xarray>=2024.3.0",
    "zarr>=2.17.1",
    "anywidget>=0.9.4",
    "jupyterlab>=4.1.5",
    "watchfiles>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/anndata_repr"]
